Fixed some spacing issues with canvas rendering and a link to the favicon

--- a/master.css
+++ b/master.css
@@ -218,17 +218,3 @@ footer h4 {
         padding-top: 12rem;
     }
 }
-
-#alt-text {
-    display: none;
-}
-
-@media (max-width: 992px) {
-    #alt-text {
-        display: block;
-    }
-
-    #canvas-wrapper {
-        display: none;
-    }
-}
